#42 Fixed overflow and unclickable part of the list made clickable

--- a/react/vite-react-app/src/main-page-books/main-page-books.css
+++ b/react/vite-react-app/src/main-page-books/main-page-books.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     position: fixed;
     width: 100%;
+    z-index: 100;
 }
 #navMoviesBooksShows{
     display: flex;
@@ -62,6 +63,8 @@
     padding-right: 60px;
     padding-top: 10px;
     padding-bottom: 10px;
+    position: relative;
+    z-index: 10;
 }
 #listBooksClickCont{
     display: flex;
@@ -105,6 +108,7 @@
     padding: 10px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
+    z-index: 100;
 }
 
 #footerMainMov p {
